After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781961 - Building crashes after changing app-id
Building crashes after changing app-id
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
Flatpak Nightly Channel
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-30 05:35 UTC by Peter Sonntag
Modified: 2017-05-08 22:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
buildmanager: synthesize build failure when invaliding pipeline (2.13 KB, patch)
2017-05-08 22:06 UTC, Christian Hergert
committed Details | Review

Description Peter Sonntag 2017-04-30 05:35:40 UTC
After modifying the app-id of an application in the json manifest(?), builder crashes when starting building the app with the follwing error message:
ide-build-manager:ERROR:buildsystem/ide-build-manager.c:118:ide_build_manager_start_timer: assertion failed: (self->timer_source == 0)

How to reproduce:
Create a new python gnome project.
Change the app-id in the json file.
Build the application.
Comment 1 Christian Hergert 2017-05-08 22:06:34 UTC
Created attachment 351394 [details] [review]
buildmanager: synthesize build failure when invaliding pipeline

If we are currently building something, we need to synthesize a build
failure for the current build and cancel any in-flight timers.
Comment 2 Christian Hergert 2017-05-08 22:07:53 UTC
Looks like we had a lingering timer from invalidating the pipeline while it was
active. The assert seems to have done it's job in tracking this down :)

Thanks for filing the bug, it helps us greatly

Attachment 351394 [details] pushed as 2adbf56 - buildmanager: synthesize build failure when invaliding pipeline