buildmanager: synthesize build failure when invaliding pipeline

If we are currently building something, we need to synthesize a build
failure for the current build and cancel any in-flight timers.

https://bugzilla.gnome.org/show_bug.cgi?id=781961